[package]
name = "argster-macros"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
version.workspace = true
description.workspace = true


[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "^1"
syn = { version = "^2", features = ["full"] }
quote = "^1"
