[package]
name = "argster"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
version.workspace = true
description.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argster-macros = { path = "../argster-macros", version = "0.1.0" }
prettytable = "^0.10"
term = "^0.7"
thiserror = "^1"
